--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Electron React</title>
   </head>
   <body>
     <div id="app"></div>
-    <script>
+    <script src="./build/bundle.js"></script>
+    <!-- <script>
       var bundlePath = './build/bundle.js';
 
       if(typeof process !== 'undefined' && process.env.ENVIRONMENT === 'DEV') {
@@ -18,6 +19,6 @@
       document.currentScript.parentNode.insertBefore(bundleScriptEl, document.currentScript);
 
 
-    </script>
+    </script> -->
   </body>
 </html>
