--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Electron React</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <div id="app"></div>
     <script src="./build/bundle.js"></script>
     <!-- <script>
